[project]
name = "chat-with-pdfs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "gradio>=5.25.2",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "llama-cpp-python>=0.3.8",
    "ollama>=0.4.8",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "unstructured[pdf]>=0.17.2",
]
